--- a/index.html
+++ b/index.html
@@ -1,52 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>Multiplayer Game</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
-    <script src="p5.play.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
+<script src="./p5.play.js"></script>
+<script src="js/Form.js"></script>
+<script src="js/Game.js"></script>
+<script src="js/Player.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
-
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
-
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyBrsGteoHw_NeJSvNd1bXpt1RWoIg45HIQ",
-    authDomain: "c40teach.firebaseapp.com",
-    databaseURL: "https://c40teach-default-rtdb.firebaseio.com",
-    projectId: "c40teach",
-    storageBucket: "c40teach.appspot.com",
-    messagingSenderId: "810441052488",
-    appId: "1:810441052488:web:c4f86835bfc5b1082a237d"
+    apiKey: "AIzaSyD_zyNwxjP2f48KuxySFoxxHPS17pjzJck",
+    authDomain: "multi-player-car-racing-9680c.firebaseapp.com",
+    projectId: "multi-player-car-racing-9680c",
+    storageBucket: "multi-player-car-racing-9680c.appspot.com",
+    messagingSenderId: "418229495206",
+    appId: "1:418229495206:web:c0bc17a03a780898b51b67"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-    <script>
-      //Your web app's Firebase configuration
-      
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    </script>
-
-    <script src="js/Player.js"></script>
-    <script src="js/Form.js"></script>
-    <script src="js/Game.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
-    <script src="sketch.js"></script>
+      <script src="sketch.js"></script>
   </body>
 </html>
